--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1> Sign In </h1>
     <form name="myform" method="post" action="index2.html">
       <input type="text" placeholder="Name" name="name" class="input" required minlength="2"><br>
-      <input type="password" placeholder="Password" name="password" class="input" required><br>
+      <input type="password" placeholder="Password" name="password" class="input" required minlength="5"><br>
       <input type="submit" class="submit" value="Sign In"><br>
     </form>
 
